completed restaurants and review model, added review controller and create/new view for review

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Restaurants</h1>
+<div>
+  <h1>Restaurants</h1>
+  <% @restaurants.each do |restaurant| %>
+    <div>
+      <div><%= restaurant.name %></div>
+    <div>
+  <%end%>
+</div>
